Changed wrapping in containers to fit with mobile view, fixed some styling issues with the header log out option.

--- a/portfolio/src/main/resources/static/styles/navbar.css
+++ b/portfolio/src/main/resources/static/styles/navbar.css
@@ -6,17 +6,6 @@ Adapted from W3 Schools.
 .navbar {
     overflow: hidden;
     background-color: #333;
-    font-family: Arial;
-}
-
-/* Links inside the navbar */
-.navbar a {
-    float: right;
-    font-size: 16px;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
 }
 
 /* The dropdown container */
@@ -26,45 +15,36 @@ Adapted from W3 Schools.
 }
 
 /* Dropdown button */
-.dropdown .dropbtn {
-    font-size: 16px;
-    border: none;
-    outline: none;
-    color: white;
+.dropbutton {
     padding: 14px 16px;
-    background-color: inherit;
     font-family: inherit; /* Important for vertical align on mobile phones */
     margin: 0; /* Important for vertical align on mobile phones */
 }
 
-/* Add a red background color to navbar links on hover */
-.navbar a:hover, .dropdown:hover .dropbtn {
-    background-color: #0332D1;
-}
-
-/* Dropdown content (hidden by default) */
+/* Dropdown content */
 .dropdown-content {
     display: none;
     position: absolute;
     background-color: #f9f9f9;
     min-width: 16px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
     z-index: 1;
 }
 
 /* Links inside the dropdown */
-.dropdown-content a {
+.dropdown-content-links {
     float: none;
     color: black;
-    padding: 6px 8px;
+    padding: 6px 10px;
+    min-width: 16px;
     text-decoration: none;
     display: block;
     text-align: left;
 }
 
 /* Add a grey background color to dropdown links on hover */
-.dropdown-content a:hover {
-    background-color: #ddd;
+.dropdown-content-links:hover {
+    background-color: #ccc;
 }
 
 /* Show the dropdown menu on hover */
