--- a/portfolio/src/main/resources/static/styles/pages/account_details.css
+++ b/portfolio/src/main/resources/static/styles/pages/account_details.css
@@ -6,7 +6,7 @@
 
 .name-container {
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
 }
 
 .card-padding {
@@ -16,6 +16,7 @@
 
 .image-container {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center
 }
@@ -26,4 +27,19 @@
 
 .right-padding {
     padding-right: 30px;
+}
+
+@media only screen and (max-width: 748px) {
+    .left-padding {
+        padding-left: 0;
+    }
+
+}
+
+@media only screen and (max-width: 860px) {
+    .container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: normal;
+    }
 }
